# rust-playground

./: .gitignore
kino-koenig/: Cargo.toml
kino-koenig/movies/: manifest.json
kino-koenig/src/: main.rs
kino-koenig/src/models/: movie.rs
kino-koenig/src/routes/: movies.rs
my-first-rust-api/: Cargo.toml
