[package]
name = "kino"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
diesel = { version = "2.1.1", features = ["postgres"] }
serde_json = { version = "1.0" }
serde = { version = "1.0.188" }